modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,157 @@
       crossorigin="anonymous"
     />
 
+    <link rel="icon" href="./assets/gant-boxe-1.png" />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="nav-top">
+      <section class="nav-top__left">
+        <img src="./assets/logo.png" alt="logo" />
+        <h1>Lorem ipsum dolor <span class="--orange">sit amet</span></h1>
+      </section>
+
+      <!-- partie droite de la nav -->
+      <section class="nav-top__right">
+        <div class="nav-top__right__user">
+          <div>
+            <i class="fas fa-user">
+              <a class="nav-top__right__user__text" href="#">Mon compte</a>
+            </i>
+          </div>
+          <div>
+            <i class="fas fa-shopping-cart">
+              <a class="nav-top__right__user__text" href="#"
+                >Votre panier est vide</a
+              ></i
+            >
+          </div>
+        </div>
+
+        <h2>Bonjour Julien</h2>
+
+        <!-- partie contact -->
+
+        <ul class="nav__contact">
+          <li><a href="#">Contactez-nous</a></li>
+          <li><a href="#">Parainage</a></li>
+          <li><a href="#">Déconnexion</a></li>
+        </ul>
+      </section>
+    </nav>
+
+    <section class="main-container">
+      <!-- image du header -->
+      <header>
+        <img src="./assets/header-page-catalogue.png" alt="image-header" />
+      </header>
+
+      <section class="container__vente">
+        <section class="vente">
+          <!-- carte article -->
+          <article class="vente__item">
+            <div class="vente__item__image">
+              <img src="./assets/gant-boxe-2.png" alt="gant-boxe-1" />
+              <h3>Gants de boxe de combat V01.</h3>
+            </div>
+
+            <!-- tag reduction en pourcentages -->
+
+            <div class="pourcentage --orange">-45%</div>
+            <div class="prix">
+              <button type="button">Voir le produit</button>
+              <span class="--old">129€</span> <span class="--orange">69€</span>
+            </div>
+          </article>
+
+          <article class="vente__item">
+            <div class="vente__item__image">
+              <img src="./assets/gant-boxe-1.png" alt="gant-boxe-1" />
+              <h3>Gants de boxe de combat V02.</h3>
+            </div>
+            <div class="pourcentage --orange">-45%</div>
+            <div class="prix">
+              <button type="button">Voir le produit</button>
+              <span class="--old">129€</span> <span class="--orange">65€</span>
+            </div>
+          </article>
+
+          <article class="vente__item">
+            <div class="vente__item__image">
+              <img src="./assets/gant-boxe-1.png" alt="gant-boxe-1" />
+              <h3>Gants de boxe de combat V02.</h3>
+            </div>
+            <div class="pourcentage --orange">-45%</div>
+            <div class="prix">
+              <button type="button">Voir le produit</button>
+              <span class="--old">129€</span> <span class="--orange">65€</span>
+            </div>
+          </article>
+
+          <article class="vente__item">
+            <div class="vente__item__image">
+              <img src="./assets/gant-boxe-1.png" alt="gant-boxe-1" />
+              <h3>Gants de boxe de combat V02.</h3>
+            </div>
+            <div class="pourcentage --orange">-45%</div>
+            <div class="prix">
+              <button type="button">Voir le produit</button>
+              <span class="--old">129€</span> <span class="--orange">65€</span>
+            </div>
+          </article>
+        </section>
+      </section>
+    </section>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Qui sommes-nous</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Assistance</a></li>
+          <li><a href="#">CGV</a></li>
+        </ul>
+      </nav>
+      <!-- cartes livre transport cadenas pouce -->
+      <section class="footer__icons">
+        <div class="footer__icons__card">
+          <img src="./assets/icon-livre.png" alt="cadena" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui neque,
+            excepturi consequatur quae nisi, veniam et amet, perspiciatis nihil
+          </p>
+        </div>
+
+        <div class="footer__icons__card">
+          <img src="./assets/icon-camion.png" alt="cadena" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui neque,
+            excepturi consequatur quae nisi, veniam et amet, perspiciatis nihil
+          </p>
+        </div>
+
+        <div class="footer__icons__card">
+          <img src="./assets/icon-cadenat.png" alt="cadena" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui neque,
+            excepturi consequatur quae nisi, veniam et amet, perspiciatis nihil
+          </p>
+        </div>
+
+        <div class="footer__icons__card">
+          <img src="./assets/icon-pouce.png" alt="cadena" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui neque,
+            excepturi consequatur quae nisi, veniam et amet, perspiciatis nihil
+          </p>
+        </div>
+      </section>
+      <div class="footer__gafam">
+        <a href="#"><img src="./assets/icon-facebook.png" alt="facebook" /></a>
+        <a href="#"><img src="./assets/icon-linkedin.png" alt="facebook" /></a>
+        <a href="#"><img src="./assets/icon-twitter.png" alt="facebook" /></a>
+      </div>
+      <p>&copy2013 Tous les droits sont réservés</p>
+    </footer>
+  </body>
 </html>
