modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <a href="#"><img src="./assets/icon-linkedin.png" alt="facebook" /></a>
         <a href="#"><img src="./assets/icon-twitter.png" alt="facebook" /></a>
       </div>
-      <p>&copy2013 Tous les droits sont réservés</p>
+      <p>&copy2021 Sport.com Tous droits réservés</p>
     </footer>
   </body>
 </html>
